like comment added

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
 body{
   font-family: 'Poppins', sans-serif;
 }
+
+/* .css-3dzjca-MuiPaper-root-MuiPopover-paper-MuiMenu-paper{
+  top: 142px;
+  left: 650px!important;
+  width: 250px;
+} */
