--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
   margin: 0;
   padding: 0;
 }
 body{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif!important;
 }
 
 /* .css-3dzjca-MuiPaper-root-MuiPopover-paper-MuiMenu-paper{
